[project]
name = "karita"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.ruff]
line-length = 79
indent-width = 4
target-version = "py310"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]

[tool.ruff.lint.flake8-builtins]
strict-checking = true

[tool.ruff.lint.flake8-type-checking]
exempt-modules = ["typing", "typing_extensions"]
quote-annotations = true
strict = true

[tool.ruff.lint.isort]
force-sort-within-sections = true